Changes: - Moved to Java 21 - Tidying up to use some new Java 21 features - Some additional speed enhancements